--- a/public/partials/step2.ejs
+++ b/public/partials/step2.ejs
@@ -25,7 +25,7 @@
     <label for="author" class="form-label">Salesperson</label>
     <input type="text" id="author" name="author" class="form-control" placeholder="Enter Salesperson" required />
     <label for="cell" class="form-label">Cell</label>
-    <input type="text" id="cell" name="cell" class="form-control" placeholder="Enter cell #" required />
+    <input type="tel" id="cell" name="cell" class="form-control" maxlength="12" placeholder="Enter cell #" required />
     <label for="extension" class="form-label">Extension</label>
     <input type="text" id="extension" name="extension" class="form-control" placeholder="Enter extension" required />
     <div id="service-section">
