removed disabled state for the title inputs

--- a/public/partials/step3.ejs
+++ b/public/partials/step3.ejs
@@ -21,7 +21,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Objective', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Objective" class="form-control section-title" disabled />
+        <input type="text" name="summarySectionName" value="Objective" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -54,7 +54,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Problem', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Problem" class="form-control section-title" disabled />
+        <input type="text" name="summarySectionName" value="Problem" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -87,7 +87,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Solution', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Solution" class="form-control section-title" disabled />
+        <input type="text" name="summarySectionName" value="Solution" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -120,7 +120,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Value', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Value" class="form-control section-title" disabled />
+        <input type="text" name="summarySectionName" value="Value" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
