--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -1,6 +1,12 @@
 <!-- Dynamic Investment Section -->
 <h2 class="mt-4 mb-3">Investment</h2>
 <div id="investment-section">
+  <div class="md-12 p-2">
+    <p>Tip:</p>
+    <p>If you want to make a word <b>bold</b>: wrap your word like this <code>*word*</code>.</p>
+    <p>If you want to make a word <i>italic</i>: wrap your word like this <code>_word_</code>.</p>
+    <p>If you want to apply both <b>bold</b> and <i>italic</i>: wrap your word like this <code>_*word*_</code>.</p>
+  </div>
   <button type="button" class="btn btn-primary mb-3" onclick="addInvestSection()">Add Investment
     Section</button>
   <div id="investment-container" class="section-container"></div>
