--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -1,7 +1,7 @@
 <!-- Dynamic Investment Section -->
 <h2 class="mt-4 mb-3">Investment</h2>
 <div id="investment-section">
-  <div class="md-12 p-2">
+  <div class="md-12 px-2 mb-2">
     <p>Tip:</p>
     <p>If you want to make a word <b>bold</b>: wrap your word like this <code>*word*</code>.</p>
     <p>If you want to make a word <i>italic</i>: wrap your word like this <code>_word_</code>.</p>
