--- a/public/partials/step3.ejs
+++ b/public/partials/step3.ejs
@@ -1,7 +1,7 @@
 <h2 class="mt-4 mb-3">Summary Information</h2>
 <div class="row" id="summary-section">
   <div class="md-12 px-3 mb-2">
-    <p>Tip:</p>
+    <p><i class="bi bi-lightbulb-fill text-warning"></i> Tip:</p>
     <p>If you want to make a word <b>bold</b>: wrap your word like this <code>*word*</code>.</p>
     <p>If you want to make a word <i>italic</i>: wrap your word like this <code>_word_</code>.</p>
     <p>If you want to apply both <b>bold</b> and <i>italic</i>: wrap your word like this <code>_*word*_</code>.</p>
@@ -26,7 +26,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Objective', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Objective" class="form-control section-title" />
+        <input type="text" name="summarySectionName" data-original-title="Objective" value="Objective" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -59,7 +59,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Problem', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Problem" class="form-control section-title" />
+        <input type="text" name="summarySectionName" data-original-title="Problem" value="Problem" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -92,7 +92,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Solution', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Solution" class="form-control section-title" />
+        <input type="text" name="summarySectionName" data-original-title="Solution" value="Solution" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
@@ -125,7 +125,7 @@
             <li><a class="dropdown-item" href="#" onclick="togglePar('Value', false)">Item</a></li>
           </ul>
         </div>
-        <input type="text" name="summarySectionName" value="Value" class="form-control section-title" />
+        <input type="text" name="summarySectionName" data-original-title="Value" value="Value" class="form-control section-title" />
         <button class="btn btn-primary add-item-btn" onclick="addField(this, false)">Add Item</button>
       </div>
 
