--- a/public/partials/step4.ejs
+++ b/public/partials/step4.ejs
@@ -1,7 +1,7 @@
 <!-- Dynamic Equipment Section -->
 <h2 class="mt-4 mb-3">Equipment</h2>
   <div class="md-12 px-3 mb-2">
-    <p>Tip:</p>
+    <p><i class="bi bi-lightbulb-fill text-warning"></i> Tip:</p>
     <p>If you want to make a word <b>bold</b>: wrap your word like this <code>*word*</code>.</p>
     <p>If you want to make a word <i>italic</i>: wrap your word like this <code>_word_</code>.</p>
     <p>If you want to apply both <b>bold</b> and <i>italic</i>: wrap your word like this <code>_*word*_</code>.</p>
